docs/grammar.bnf
<program> ::= (<using-directive>)* (<statement> | <label>)*

<using-directive> ::= "using " <identifier>

<statement> ::= <scope> | <expr> ";" | <assignment> ";" | <if-expr>

<scope> ::= "{" <statement>* "}"

<expr> ::= <term> | <term> ( "+" | "-" ) <term>

<term> ::= <factor> | <factor> ( "*" | "/" ) <factor>

<factor> ::= <member-access> | <member-access> "**" <member-access>

<member-access> ::= <atom> ("." <identifier>)*

<atom> ::= "(" <expr> ")" | <number-literal> | <string-literal> | <identifier>

<number-literal> ::= ([0-9]* "." [0-9]+) | ([0-9]+ "." [0-9]*) | [0-9]+

<string-literal> ::= \" ?* \"

<label> ::= <identifier> ":"

<identifier> ::= [a-zA-Z_] [a-zA-Z0-9_]*
